--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
@@ -80,6 +81,7 @@
       padding: 10px;
       border-radius: 10px;
       z-index: 100;
+      display: none; /* hidden by default */
     }
     .theme-panel { left: 10px; }
     .neon-panel { left: 150px; }
@@ -101,25 +103,52 @@
     .panel-item:hover {
       color: var(--accent-color);
     }
+    /* Toggle button */
+    .toggle-btn {
+      position: fixed;
+      top: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 200;
+      background-color: var(--accent-color);
+      color: var(--text-color);
+      padding: 6px 12px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 14px;
+    }
   </style>
 </head>
 <body>
-  <div class="floating-panel theme-panel">
+
+  <!-- Customize UI toggle -->
+  <button class="toggle-btn" onclick="toggleUIPanels()">Customize UI</button>
+
+  <!-- Floating Panels (hidden by default) -->
+  <div class="floating-panel theme-panel" id="themePanel">
     <div class="panel-title">Themes</div>
     <div id="themeList"></div>
   </div>
-  <div class="floating-panel neon-panel">
+  <div class="floating-panel neon-panel" id="neonPanel">
     <div class="panel-title">Neon Combos</div>
     <div id="neonList"></div>
   </div>
-  <div class="floating-panel font-panel">
+  <div class="floating-panel font-panel" id="fontPanel">
     <div class="panel-title">Font Styles</div>
     <div id="fontList"></div>
   </div>
+
   <div class="max-w-5xl mx-auto px-4 py-6">
     <header class="text-center mb-6">
       <h1 class="text-4xl font-extrabold neon">Wind Breaker - Season 1</h1>
     </header>
+
+    <!-- Refresh note -->
+    <p class="text-center text-sm text-gray-400 mb-4 italic">
+      Note: If the episodes are not loaded, please refresh the page.
+    </p>
+
     <div class="video-container rounded-xl shadow-lg overflow-hidden relative neon-box" onmousemove="showControls()">
       <div id="videoPlayer"></div>
       <div class="overlay-layer" onclick="togglePlayPause()"></div>
@@ -130,156 +159,169 @@
         <button class="control-btn" onclick="toggleFullscreen()">Fullscreen</button>
       </div>
     </div>
+
     <div class="mt-6 bg-gray-800 p-4 rounded-lg neon-box">
       <h2 class="text-xl font-semibold mb-2">About Wind Breaker</h2>
       <p>
         Wind Breaker is a high-energy anime series that follows Haruka Sakura, a strong and rebellious transfer student who joins Furin High School...
       </p>
     </div>
+
     <div class="mt-6 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4" id="episodeList"></div>
+
     <footer class="mt-10 text-sm text-center text-gray-400">
       <p>A heartfelt thank you to the creators of <strong>Wind Breaker</strong> for bringing such an inspiring and thrilling story to life.</p>
       <p>Please <strong>subscribe to Muse India</strong> for supporting anime in our region.</p>
     </footer>
   </div>
+
   <script>
+    function toggleUIPanels() {
+      ['themePanel','neonPanel','fontPanel'].forEach(id => {
+        const el = document.getElementById(id);
+        el.style.display = (el.style.display === 'block') ? 'none' : 'block';
+      });
+    }
+
     let player;
     let currentEpisodeIndex = 0;
-    let hideControlsTimer;const episodes = [
-  { title: "Episode 1", link: "ne0Y0vyjxpE" },
-  { title: "Episode 2", link: "J2568cnOa1g" },
-  { title: "Episode 3", link: "QOMv17IjJAU" },
-  { title: "Episode 4", link: "MT7WzTJZCxg" },
-  { title: "Episode 5", link: "4sRfndp1vAM" },
-  { title: "Episode 6", link: "oTvQ-5BNC6w" },
-  { title: "Episode 7", link: "Em5lFIz_kxU" },
-  { title: "Episode 8", link: "SBaGblvd4mU" },
-  { title: "Episode 9", link: "43Hj2GySjgA" },
-  { title: "Episode 10", link: "TIpodnZtFP4" },
-  { title: "Episode 11", link: "_L-UG_jvnM4" },
-  { title: "Episode 12", link: "skAwsc6UL8A" },
-  { title: "Episode 13", link: "-xUk9E2iQQY" }
-];
+    let hideControlsTimer;
 
-function onYouTubeIframeAPIReady() {
-  player = new YT.Player('videoPlayer', {
-    videoId: episodes[currentEpisodeIndex].link,
-    playerVars: { autoplay: 1, controls: 0, modestbranding: 1, rel: 0 },
-    events: {
-      onReady: loadEpisodes,
-      onStateChange: event => {
-        if (event.data === YT.PlayerState.ENDED) playNextEpisode();
+    const episodes = [
+      { title: "Episode 1", link: "ne0Y0vyjxpE" },
+      { title: "Episode 2", link: "J2568cnOa1g" },
+      { title: "Episode 3", link: "QOMv17IjJAU" },
+      { title: "Episode 4", link: "MT7WzTJZCxg" },
+      { title: "Episode 5", link: "4sRfndp1vAM" },
+      { title: "Episode 6", link: "oTvQ-5BNC6w" },
+      { title: "Episode 7", link: "Em5lFIz_kxU" },
+      { title: "Episode 8", link: "SBaGblvd4mU" },
+      { title: "Episode 9", link: "43Hj2GySjgA" },
+      { title: "Episode 10", link: "TIpodnZtFP4" },
+      { title: "Episode 11", link: "_L-UG_jvnM4" },
+      { title: "Episode 12", link: "skAwsc6UL8A" },
+      { title: "Episode 13", link: "-xUk9E2iQQY" }
+    ];
+
+    function onYouTubeIframeAPIReady() {
+      player = new YT.Player('videoPlayer', {
+        videoId: episodes[currentEpisodeIndex].link,
+        playerVars: { autoplay: 1, controls: 0, modestbranding: 1, rel: 0 },
+        events: {
+          onReady: loadEpisodes,
+          onStateChange: event => {
+            if (event.data === YT.PlayerState.ENDED) playNextEpisode();
+          }
+        }
+      });
+    }
+
+    function seek(sec) {
+      const time = player.getCurrentTime();
+      player.seekTo(time + sec, true);
+    }
+
+    function togglePlayPause() {
+      const state = player.getPlayerState();
+      if (state === YT.PlayerState.PLAYING) player.pauseVideo();
+      else player.playVideo();
+    }
+
+    function toggleFullscreen() {
+      const wrapper = document.querySelector(".video-container");
+      if (!document.fullscreenElement) wrapper.requestFullscreen();
+      else document.exitFullscreen();
+    }
+
+    function playNextEpisode() {
+      if (currentEpisodeIndex < episodes.length - 1) {
+        currentEpisodeIndex++;
+        player.loadVideoById(episodes[currentEpisodeIndex].link);
       }
     }
-  });
-}
 
-function seek(sec) {
-  const time = player.getCurrentTime();
-  player.seekTo(time + sec, true);
-}
+    function loadEpisodes() {
+      const container = document.getElementById("episodeList");
+      container.innerHTML = '';
+      episodes.forEach((ep, i) => {
+        const btn = document.createElement("button");
+        btn.className = "p-3 bg-purple-700 hover:bg-purple-800 rounded-xl shadow-md text-left text-white w-full neon-box";
+        btn.textContent = ep.title;
+        btn.onclick = () => {
+          currentEpisodeIndex = i;
+          player.loadVideoById(ep.link);
+        };
+        container.appendChild(btn);
+      });
+    }
 
-function togglePlayPause() {
-  const state = player.getPlayerState();
-  if (state === YT.PlayerState.PLAYING) player.pauseVideo();
-  else player.playVideo();
-}
+    function showControls() {  
+      clearTimeout(hideControlsTimer);  
+      const controls = document.getElementById("videoControls");  
+      controls.style.opacity = 1;  
+      hideControlsTimer = setTimeout(() => { controls.style.opacity = 0; }, 3000);  
+    }
 
-function toggleFullscreen() {
-  const wrapper = document.querySelector(".video-container");
-  if (!document.fullscreenElement) wrapper.requestFullscreen();
-  else document.exitFullscreen();
-}
+    const themes = [
+      ['#0b0f1a', '#ffffff', '#8e2de2', 'Dark Violet'],
+      ['#1a1a1a', '#eee', '#ff4081', 'Dark Pink'],
+      ['#121212', '#ddd', '#00bcd4', 'Dark Aqua'],
+      ['#1e1e2f', '#e5e5e5', '#ff9800', 'Dark Orange'],
+      ['#202020', '#fafafa', '#e91e63', 'Dark Rose'],
+      ['#ffffff', '#000000', '#ff4081', 'White Pink'],
+      ['#f9f9f9', '#111', '#3f51b5', 'White Indigo'],
+      ['#eeeeee', '#000', '#009688', 'White Teal'],
+      ['#fff', '#333', '#673ab7', 'White Purple'],
+      ['#f0f0f0', '#111', '#ff5722', 'White Red']
+    ];
 
-function playNextEpisode() {
-  if (currentEpisodeIndex < episodes.length - 1) {
-    currentEpisodeIndex++;
-    player.loadVideoById(episodes[currentEpisodeIndex].link);
-  }
-}
+    const neonColors = [
+      ['#39ff14', 'Neon Green'], ['#ff00ff', 'Neon Magenta'],
+      ['#00ffff', 'Neon Cyan'], ['#ffd700', 'Neon Gold'],
+      ['#00ff00', 'Neon Lime'], ['#ff4444', 'Neon Red'],
+      ['#44ffdd', 'Neon Aqua'], ['#cc00cc', 'Neon Purple'],
+      ['#ffaa00', 'Neon Orange'], ['#00ccff', 'Neon Sky']
+    ];
 
-function loadEpisodes() {
-  const container = document.getElementById("episodeList");
-  container.innerHTML = '';
-  episodes.forEach((ep, i) => {
-    const btn = document.createElement("button");
-    btn.className = "p-3 bg-purple-700 hover:bg-purple-800 rounded-xl shadow-md text-left text-white w-full neon-box";
-    btn.textContent = ep.title;
-    btn.onclick = () => {
-      currentEpisodeIndex = i;
-      player.loadVideoById(ep.link);
-    };
-    container.appendChild(btn);
-  });
-}
+    const fontFamilies = [
+      ['Poppins', 'Poppins'], ['Roboto', 'Roboto'], ['Orbitron', 'Orbitron'],
+      ['Montserrat', 'Montserrat'], ['Fira Sans', 'Fira Sans']
+    ];
 
-function showControls() {
-  clearTimeout(hideControlsTimer);
-  const controls = document.getElementById("videoControls");
-  controls.style.opacity = 1;
-  hideControlsTimer = setTimeout(() => { controls.style.opacity = 0; }, 3000);
-}
+    themes.forEach(([bg, text, accent, name]) => {
+      const btn = document.createElement("div");
+      btn.className = "panel-item";
+      btn.textContent = name;
+      btn.onclick = () => {
+        document.documentElement.style.setProperty('--bg-color', bg);
+        document.documentElement.style.setProperty('--text-color', text);
+        document.documentElement.style.setProperty('--accent-color', accent);
+        document.documentElement.style.setProperty('--control-bg',
+          bg.includes('#fff') ? 'rgba(0,0,0,0.1)' : 'rgba(255,255,255,0.1)');
+      };
+      document.getElementById("themeList").appendChild(btn);
+    });
 
-const themes = [
-  ['#0b0f1a', '#ffffff', '#8e2de2', 'Dark Violet'],
-  ['#1a1a1a', '#eee', '#ff4081', 'Dark Pink'],
-  ['#121212', '#ddd', '#00bcd4', 'Dark Aqua'],
-  ['#1e1e2f', '#e5e5e5', '#ff9800', 'Dark Orange'],
-  ['#202020', '#fafafa', '#e91e63', 'Dark Rose'],
-  ['#ffffff', '#000000', '#ff4081', 'White Pink'],
-  ['#f9f9f9', '#111', '#3f51b5', 'White Indigo'],
-  ['#eeeeee', '#000', '#009688', 'White Teal'],
-  ['#fff', '#333', '#673ab7', 'White Purple'],
-  ['#f0f0f0', '#111', '#ff5722', 'White Red']
-];
+    neonColors.forEach(([color, name]) => {
+      const btn = document.createElement("div");
+      btn.className = "panel-item";
+      btn.textContent = name;
+      btn.onclick = () => {
+        document.documentElement.style.setProperty('--neon-glow', color);
+        document.documentElement.style.setProperty('--box-border', `0 0 10px ${color}`);
+      };
+      document.getElementById("neonList").appendChild(btn);
+    });
 
-const neonColors = [
-  ['#39ff14', 'Neon Green'], ['#ff00ff', 'Neon Magenta'],
-  ['#00ffff', 'Neon Cyan'], ['#ffd700', 'Neon Gold'],
-  ['#00ff00', 'Neon Lime'], ['#ff4444', 'Neon Red'],
-  ['#44ffdd', 'Neon Aqua'], ['#cc00cc', 'Neon Purple'],
-  ['#ffaa00', 'Neon Orange'], ['#00ccff', 'Neon Sky']
-];
-
-const fontFamilies = [
-  ['Poppins', 'Poppins'], ['Roboto', 'Roboto'], ['Orbitron', 'Orbitron'],
-  ['Montserrat', 'Montserrat'], ['Fira Sans', 'Fira Sans']
-];
-
-themes.forEach(([bg, text, accent, name]) => {
-  const btn = document.createElement("div");
-  btn.className = "panel-item";
-  btn.textContent = name;
-  btn.onclick = () => {
-    document.documentElement.style.setProperty('--bg-color', bg);
-    document.documentElement.style.setProperty('--text-color', text);
-    document.documentElement.style.setProperty('--accent-color', accent);
-    document.documentElement.style.setProperty('--control-bg', bg.includes('#fff') ? 'rgba(0,0,0,0.1)' : 'rgba(255,255,255,0.1)');
-  };
-  document.getElementById("themeList").appendChild(btn);
-});
-
-neonColors.forEach(([color, name]) => {
-  const btn = document.createElement("div");
-  btn.className = "panel-item";
-  btn.textContent = name;
-  btn.onclick = () => {
-    document.documentElement.style.setProperty('--neon-glow', color);
-    document.documentElement.style.setProperty('--box-border', `0 0 10px ${color}`);
-  };
-  document.getElementById("neonList").appendChild(btn);
-});
-
-fontFamilies.forEach(([font, label]) => {
-  const btn = document.createElement("div");
-  btn.className = "panel-item";
-  btn.textContent = label;
-  btn.onclick = () => {
-    document.documentElement.style.setProperty('--font-family', `'${font}', sans-serif`);
-  };
-  document.getElementById("fontList").appendChild(btn);
-});
-
+    fontFamilies.forEach(([font, label]) => {
+      const btn = document.createElement("div");
+      btn.className = "panel-item";
+      btn.textContent = label;
+      btn.onclick = () => {
+        document.documentElement.style.setProperty('--font-family', `'${font}', sans-serif`);
+      };
+      document.getElementById("fontList").appendChild(btn);
+    });
   </script>
 </body>
 </html>
