--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
@@ -118,15 +117,23 @@
       cursor: pointer;
       font-size: 14px;
     }
+    /* Search box styling */
+    .search-box {
+      width: 100%;
+      max-width: 400px;
+      margin: 1rem auto;
+      padding: 8px 12px;
+      border-radius: 6px;
+      border: none;
+      background-color: var(--control-bg);
+      color: var(--text-color);
+      font-size: 14px;
+    }
   </style>
 </head>
-<body>
+<body>  <!-- Customize UI toggle --><button class="toggle-btn" onclick="toggleUIPanels()">Customize UI</button>
 
-  <!-- Customize UI toggle -->
-  <button class="toggle-btn" onclick="toggleUIPanels()">Customize UI</button>
-
-  <!-- Floating Panels (hidden by default) -->
-  <div class="floating-panel theme-panel" id="themePanel">
+  <!-- Floating Panels (hidden by default) -->  <div class="floating-panel theme-panel" id="themePanel">
     <div class="panel-title">Themes</div>
     <div id="themeList"></div>
   </div>
@@ -137,45 +144,43 @@
   <div class="floating-panel font-panel" id="fontPanel">
     <div class="panel-title">Font Styles</div>
     <div id="fontList"></div>
-  </div>
-
-  <div class="max-w-5xl mx-auto px-4 py-6">
+  </div>  <div class="max-w-5xl mx-auto px-4 py-6">
     <header class="text-center mb-6">
       <h1 class="text-4xl font-extrabold neon">Wind Breaker - Season 1</h1>
-    </header>
+    </header><!-- Refresh note -->
+<p class="text-center text-sm text-gray-400 mb-4 italic">
+  Note: If the episodes are not loaded, please refresh the page.
+</p>
 
-    <!-- Refresh note -->
-    <p class="text-center text-sm text-gray-400 mb-4 italic">
-      Note: If the episodes are not loaded, please refresh the page.
-    </p>
+<!-- Search input -->
+<input type="text" id="searchBox" class="search-box" placeholder="Search episodes..." oninput="filterEpisodes()">
 
-    <div class="video-container rounded-xl shadow-lg overflow-hidden relative neon-box" onmousemove="showControls()">
-      <div id="videoPlayer"></div>
-      <div class="overlay-layer" onclick="togglePlayPause()"></div>
-      <div class="controls" id="videoControls">
-        <button class="control-btn" onclick="seek(-10)">-10s</button>
-        <button class="control-btn" onclick="togglePlayPause()">Play/Pause</button>
-        <button class="control-btn" onclick="seek(10)">+10s</button>
-        <button class="control-btn" onclick="toggleFullscreen()">Fullscreen</button>
-      </div>
-    </div>
-
-    <div class="mt-6 bg-gray-800 p-4 rounded-lg neon-box">
-      <h2 class="text-xl font-semibold mb-2">About Wind Breaker</h2>
-      <p>
-        Wind Breaker is a high-energy anime series that follows Haruka Sakura, a strong and rebellious transfer student who joins Furin High School...
-      </p>
-    </div>
-
-    <div class="mt-6 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4" id="episodeList"></div>
-
-    <footer class="mt-10 text-sm text-center text-gray-400">
-      <p>A heartfelt thank you to the creators of <strong>Wind Breaker</strong> for bringing such an inspiring and thrilling story to life.</p>
-      <p>Please <strong>subscribe to Muse India</strong> for supporting anime in our region.</p>
-    </footer>
+<div class="video-container rounded-xl shadow-lg overflow-hidden relative neon-box" onmousemove="showControls()">
+  <div id="videoPlayer"></div>
+  <div class="overlay-layer" onclick="togglePlayPause()"></div>
+  <div class="controls" id="videoControls">
+    <button class="control-btn" onclick="seek(-10)">-10s</button>
+    <button class="control-btn" onclick="togglePlayPause()">Play/Pause</button>
+    <button class="control-btn" onclick="seek(10)">+10s</button>
+    <button class="control-btn" onclick="toggleFullscreen()">Fullscreen</button>
   </div>
+</div>
 
-  <script>
+<div class="mt-6 bg-gray-800 p-4 rounded-lg neon-box">
+  <h2 class="text-xl font-semibold mb-2">About Wind Breaker</h2>
+  <p>
+    Wind Breaker is a high-energy anime series that follows Haruka Sakura, a strong and rebellious transfer student who joins Furin High School...
+  </p>
+</div>
+
+<div class="mt-6 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4" id="episodeList"></div>
+
+<footer class="mt-10 text-sm text-center text-gray-400">
+  <p>A heartfelt thank you to the creators of <strong>Wind Breaker</strong> for bringing such an inspiring and thrilling story to life.</p>
+  <p>Please <strong>subscribe to Muse India</strong> for supporting anime in our region.</p>
+</footer>
+
+  </div>  <script>
     function toggleUIPanels() {
       ['themePanel','neonPanel','fontPanel'].forEach(id => {
         const el = document.getElementById(id);
@@ -186,7 +191,7 @@
     let player;
     let currentEpisodeIndex = 0;
     let hideControlsTimer;
-
+    
     const episodes = [
       { title: "Episode 1", link: "ne0Y0vyjxpE" },
       { title: "Episode 2", link: "J2568cnOa1g" },
@@ -255,11 +260,18 @@
       });
     }
 
-    function showControls() {  
-      clearTimeout(hideControlsTimer);  
-      const controls = document.getElementById("videoControls");  
-      controls.style.opacity = 1;  
-      hideControlsTimer = setTimeout(() => { controls.style.opacity = 0; }, 3000);  
+    function showControls() {
+      clearTimeout(hideControlsTimer);
+      const controls = document.getElementById("videoControls");
+      controls.style.opacity = 1;
+      hideControlsTimer = setTimeout(() => { controls.style.opacity = 0; }, 3000);
+    }
+
+    function filterEpisodes() {
+      const query = document.getElementById('searchBox').value.toLowerCase();
+      document.querySelectorAll('#episodeList button').forEach(btn => {
+        btn.style.display = btn.textContent.toLowerCase().includes(query) ? 'block' : 'none';
+      });
     }
 
     const themes = [
@@ -297,7 +309,8 @@
         document.documentElement.style.setProperty('--text-color', text);
         document.documentElement.style.setProperty('--accent-color', accent);
         document.documentElement.style.setProperty('--control-bg',
-          bg.includes('#fff') ? 'rgba(0,0,0,0.1)' : 'rgba(255,255,255,0.1)');
+          bg.includes('#fff') ? 'rgba(0,0,0,0.1)' : 'rgba(255,255,255,0.1)'
+        );
       };
       document.getElementById("themeList").appendChild(btn);
     });
@@ -322,6 +335,5 @@
       };
       document.getElementById("fontList").appendChild(btn);
     });
-  </script>
-</body>
+  </script></body>
 </html>
