--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -43,78 +43,75 @@
       top: 0; left: 0;
       width: 100%; height: 100%;
     }
-    .overlay-layer { z-index: 2; }.controls, .progress-bar, .toggle-btn {
-  opacity: 0;
-  transition: opacity 0.3s;
-}
-.controls {
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-  gap: 6px;
-  z-index: 3;
-}
-.control-btn {
-  background-color: var(--control-bg);
-  color: var(--text-color);
-  border: none;
-  padding: 6px 10px;
-  font-size: 12px;
-  border-radius: 6px;
-  cursor: pointer;
-}
-.control-btn:hover { background-color: var(--accent-color); }
-
-.progress-bar {
-  position: absolute;
-  bottom: 38px;
-  left: 10%;
-  width: 80%;
-  height: 12px; /* increased height for easier touch */
-  background: rgba(255,255,255,0.3);
-  cursor: pointer;
-  z-index: 3;
-}
-.progress { height: 100%; background: var(--accent-color); width: 0%; }
-
-.toggle-btn {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  z-index: 200;
-  background-color: var(--accent-color);
-  color: var(--text-color);
-  padding: 6px 12px;
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
-}
-
-.floating-panel { position: fixed; top: 50px; background-color: var(--control-bg); color: var(--text-color); padding: 10px; border-radius: 10px; z-index: 100; display: none; }
-.theme-panel { right: 10px; }
-.neon-panel { right: 160px; }
-.font-panel { right: 310px; }
-.panel-title { font-size: 14px; margin-bottom: 5px; font-weight: bold; }
-.panel-item { margin-bottom: 4px; cursor: pointer; font-size: 12px; }
-.panel-item:hover { color: var(--accent-color); }
-
-.search-box { width: 100%; max-width: 400px; margin: 1rem auto; display: block; padding: 8px 12px; border-radius: 6px; border: none; background-color: var(--control-bg); color: var(--text-color); }
-#episodeList { display: grid; grid-template-columns: repeat(4, 1fr); gap: 8px; max-width: 800px; margin: 20px auto; }
-.episode-btn { padding: 10px; background: #2d2d3d; border-radius: 6px; text-align: center; cursor: pointer; }
-.episode-btn:hover { background: #444; }
-
-.description-box { max-width: 800px; margin: 20px auto; background: rgba(0,0,0,0.6); padding: 15px; border-radius: 8px; box-shadow: var(--box-border); }
-.popup-overlay { position: fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.8); display:flex; align-items:center; justify-content:center; z-index:300; color:#fff; text-align:center; padding:20px; }
-.popup-box { background:#111; padding:20px; border-radius:8px; max-width:300px; }
-.hidden { display: none; }
-
+    .overlay-layer { z-index: 2; }
+    .controls, .progress-bar, .toggle-btn {
+      opacity: 0;
+      transition: opacity 0.3s;
+    }
+    .controls {
+      position: absolute;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      gap: 6px;
+      z-index: 3;
+    }
+    .control-btn {
+      background-color: var(--control-bg);
+      color: var(--text-color);
+      border: none;
+      padding: 6px 10px;
+      font-size: 12px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    .control-btn:hover { background-color: var(--accent-color); }
+    .progress-bar {
+      position: absolute;
+      bottom: 38px;
+      left: 10%;
+      width: 80%;
+      height: 12px;
+      background: rgba(255,255,255,0.3);
+      cursor: pointer;
+      z-index: 3;
+    }
+    .progress { height: 100%; background: var(--accent-color); width: 0%; }
+    .toggle-btn {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      z-index: 200;
+      background-color: var(--accent-color);
+      color: var(--text-color);
+      padding: 6px 12px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    .floating-panel { position: fixed; top: 50px; background-color: var(--control-bg); color: var(--text-color); padding: 10px; border-radius: 10px; z-index: 100; display: none; }
+    .theme-panel { right: 10px; }
+    .neon-panel { right: 160px; }
+    .font-panel { right: 310px; }
+    .panel-title { font-size: 14px; margin-bottom: 5px; font-weight: bold; }
+    .panel-item { margin-bottom: 4px; cursor: pointer; font-size: 12px; }
+    .panel-item:hover { color: var(--accent-color); }
+    .search-box { width: 100%; max-width: 400px; margin: 1rem auto; display: block; padding: 8px 12px; border-radius: 6px; border: none; background-color: var(--control-bg); color: var(--text-color); }
+    #episodeList { display: grid; grid-template-columns: repeat(4, 1fr); gap: 8px; max-width: 800px; margin: 20px auto; }
+    .episode-btn { padding: 10px; background: #2d2d3d; border-radius: 6px; text-align: center; cursor: pointer; }
+    .episode-btn:hover { background: #444; }
+    .description-box { max-width: 800px; margin: 20px auto; background: rgba(0,0,0,0.6); padding: 15px; border-radius: 8px; box-shadow: var(--box-border); }
+    .popup-overlay { position: fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.8); display:flex; align-items:center; justify-content:center; z-index:300; color:#fff; text-align:center; padding:20px; }
+    .popup-box { background:#111; padding:20px; border-radius:8px; max-width:300px; }
+    .hidden { display: none; }
   </style>
 </head>
-<body>  <header class="text-center mt-4 relative">
+<body>
+  <header class="text-center mt-4 relative">
     <h1 class="text-4xl font-extrabold neon">Wind Breaker - Season 1</h1>
-  </header>  <div class="video-container rounded-xl shadow-lg overflow-hidden relative neon-box" onmousemove="showControls()">
+  </header>
+  <div class="video-container rounded-xl shadow-lg overflow-hidden relative neon-box" onmousemove="showControls()">
     <div id="videoPlayer"></div>
     <div class="overlay-layer" onclick="togglePlayPause()"></div>
     <div class="progress-bar" id="progress-bar"><div class="progress" id="progress"></div></div>
@@ -124,21 +121,29 @@
       <button class="control-btn" onclick="seek(10)">+10s</button>
       <button class="control-btn" onclick="toggleFullscreen()">Fullscreen</button>
     </div>
-    <button class="toggle-btn" id="uiToggle" onclick="toggleUIPanels()">Customize UI</button>
-  </div>  <div class="description-box">
+    <button class="toggle-btn" id="uiToggle">Customize UI</button>
+  </div>
+  <div class="description-box">
     <h2 class="text-xl font-semibold mb-2">Description</h2>
     <p>Wind Breaker is a high-energy anime series that follows Haruka Sakura, a strong and rebellious transfer student who joins Furin High School...</p>
-  </div>  <input type="text" id="searchBox" class="search-box" placeholder="Search episodes..." oninput="filterEpisodes()">
-  <div id="episodeList"></div>  <footer class="mt-10 text-sm text-center text-gray-400">
+  </div>
+  <input type="text" id="searchBox" class="search-box" placeholder="Search episodes..." oninput="filterEpisodes()">
+  <div id="episodeList"></div>
+  <footer class="mt-10 text-sm text-center text-gray-400">
     <p>Thank you for visiting! Please <strong>subscribe to Muse India</strong> to support anime in our region.</p>
-  </footer>  <div class="popup-overlay hidden" id="adPopup">
+  </footer>
+  <div class="popup-overlay hidden" id="adPopup">
     <div class="popup-box">
       <h3 class="text-lg font-bold mb-2">Support Us</h3>
       <p class="mb-4">To watch this anime, support us!<br><small>(Caution: don't download anything; ads are not directed by me.)</small></p>
       <button class="control-btn mb-2" id="adButton" onclick="onAdClick()" disabled>Wait...</button>
       <div id="countdown">Please wait 5s...</div>
     </div>
-  </div><script>
+  </div>
+  <div class="floating-panel theme-panel" id="themePanel"><div class="panel-title">Themes</div><div id="themeList"></div></div>
+  <div class="floating-panel neon-panel" id="neonPanel"><div class="panel-title">Neon Colors</div><div id="neonList"></div></div>
+  <div class="floating-panel font-panel" id="fontPanel"><div class="panel-title">Fonts</div><div id="fontList"></div></div>
+  <script>
   const episodes = [
     { title: "Episode 1", link: "ne0Y0vyjxpE" },
     { title: "Episode 2", link: "J2568cnOa1g" },
@@ -154,84 +159,25 @@
     { title: "Episode 12", link: "skAwsc6UL8A" },
     { title: "Episode 13", link: "-xUk9E2iQQY" }
   ];
-
   let player, currentEpisodeIndex = 0, hideControlsTimer, isDragging = false;
   function onYouTubeIframeAPIReady() {
     player = new YT.Player('videoPlayer', {
       videoId: episodes[0].link,
       playerVars: { autoplay: 1, controls: 0, modestbranding: 1, rel: 0 },
-      events: {
-        onReady: loadEpisodes,
-        onStateChange: e => { if (e.data === YT.PlayerState.ENDED) playNextEpisode(); }
-      }
+      events: { onReady: () => { loadEpisodes(); loadUISettings(); }, onStateChange: e => { if (e.data === YT.PlayerState.ENDED) playNextEpisode(); } }
     });
   }
-
   function loadEpisodes() {
     const list = document.getElementById('episodeList'); list.innerHTML = '';
-    episodes.forEach((ep, i) => {
-      const btn = document.createElement('div');
-      btn.className = 'episode-btn'; btn.textContent = ep.title;
-      btn.onclick = () => { currentEpisodeIndex = i; player.loadVideoById(ep.link); };
-      list.appendChild(btn);
-    });
+    episodes.forEach((ep, i) => { const btn = document.createElement('div'); btn.className = 'episode-btn'; btn.textContent = ep.title; btn.onclick = () => { currentEpisodeIndex = i; player.loadVideoById(ep.link); }; list.appendChild(btn); });
   }
-
-  function showControls() {
-    clearTimeout(hideControlsTimer);
-    document.getElementById('videoControls').style.opacity = 1;
-    document.getElementById('uiToggle').style.opacity = 1;
-    document.getElementById('progress-bar').style.opacity = 1;
-    hideControlsTimer = setTimeout(() => {
-      document.getElementById('videoControls').style.opacity = 0;
-      document.getElementById('uiToggle').style.opacity = 0;
-      document.getElementById('progress-bar').style.opacity = 0;
-    }, 3000);
-  }
-
-  function seek(sec) { player.seekTo(player.getCurrentTime() + sec, true); }
-  function togglePlayPause() { const s = player.getPlayerState(); s === YT.PlayerState.PLAYING ? player.pauseVideo() : player.playVideo(); }
-  function toggleFullscreen() { const w = document.querySelector('.video-container'); document.fullscreenElement ? document.exitFullscreen() : w.requestFullscreen(); }
-  function playNextEpisode() { if (currentEpisodeIndex < episodes.length - 1) { currentEpisodeIndex++; player.loadVideoById(episodes[currentEpisodeIndex].link); } }
-
-  // progress update + drag
-  const progressBar = document.getElementById('progress-bar'), progress = document.getElementById('progress');
-  setInterval(() => {
-    if (!isDragging && player && player.getCurrentTime) {
-      const pct = (player.getCurrentTime() / player.getDuration()) * 100;
-      progress.style.width = pct + '%';
-    }
-  }, 200);
-  progressBar.addEventListener('mousedown', startDrag);
-  document.addEventListener('mousemove', doDrag);
-  document.addEventListener('mouseup', stopDrag);
-  function startDrag(e) { isDragging = true; updateSeek(e); }
-  function doDrag(e) { if (isDragging) updateSeek(e); }
-  function stopDrag(e) { if (isDragging) { updateSeek(e); isDragging = false; } }
-  function updateSeek(e) {
-    const rect = progressBar.getBoundingClientRect();
-    let x = e.clientX - rect.left; x = Math.max(0, Math.min(x, rect.width));
-    const pct = x / rect.width;
-    progress.style.width = pct * 100 + '%';
-    if (player && player.seekTo) player.seekTo(pct * player.getDuration(), true);
-  }
-
   // UI panels
+  document.getElementById('uiToggle').addEventListener('click', toggleUIPanels);
   function toggleUIPanels() { ['themePanel','neonPanel','fontPanel'].forEach(id => { const el = document.getElementById(id); el.style.display = el.style.display==='block' ? 'none' : 'block'; }); }
-  const themes=[['#0b0f1a','#fff','#8e2de2','Dark Violet'],['#1a1a1a','#eee','#ff4081','Dark Pink'],['#121212','#ddd','#00bcd4','Dark Aqua'],['#1e1e2f','#e5e5e5','#ff9800','Dark Orange'],['#202020','#fafafa','#e91e63','Dark Rose'],['#ffffff','#000','#ff4081','White Pink'],['#f9f9f9','#111','#3f51b5','White Indigo'],['#eeeeee','#000','#009688','White Teal'],['#fff','#333','#673ab7','White Purple'],['#f0f0f0','#111','#ff5722','White Red']];
-  themes.forEach(([bg,txt,acc,name])=>{ const d=document.createElement('div'); d.className='panel-item'; d.textContent=name; d.onclick=()=>{ document.documentElement.style.setProperty('--bg-color',bg); document.documentElement.style.setProperty('--text-color',txt); document.documentElement.style.setProperty('--accent-color',acc); document.documentElement.style.setProperty('--control-bg', bg.includes('#fff')?'rgba(0,0,0,0.1)':'rgba(255,255,255,0.1)'); }; document.getElementById('themeList').appendChild(d); });
-  const neonColors=[['#39ff14','Neon Green'],['#ff00ff','Neon Magenta'],['#00ffff','Neon Cyan'],['#ffd700','Neon Gold'],['#00ff00','Neon Lime'],['#ff4444','Neon Red'],['#44ffdd','Neon Aqua'],['#cc00cc','Neon Purple'],['#ffaa00','Neon Orange'],['#00ccff','Neon Sky']];
-  neonColors.forEach(([col,name])=>{ const d=document.createElement('div'); d.className='panel-item'; d.textContent=name; d.onclick=()=>{ document.documentElement.style.setProperty('--neon-glow',col); document.documentElement.style.setProperty('--box-border',`0 0 10px ${col}`); }; document.getElementById('neonList').appendChild(d); });
-  const fonts=[['Poppins','Poppins'],['Roboto','Roboto'],['Orbitron','Orbitron'],['Montserrat','Montserrat'],['Fira Sans','Fira Sans']];
-  fonts.forEach(([f,label])=>{ const d=document.createElement('div'); d.className='panel-item'; d.textContent=label; d.onclick=()=>document.documentElement.style.setProperty('--font-family',`'${f}',sans-serif`); document.getElementById('fontList').appendChild(d); });
-
-  // search filter
-  function filterEpisodes(){ const q=document.getElementById('searchBox').value.toLowerCase(); document.querySelectorAll('#episodeList .episode-btn').forEach(btn=>{ btn.style.display=btn.textContent.toLowerCase().includes(q)?'block':'none'; }); }
-
-  // ad popup with 1h cooldown
-  const popup=document.getElementById('adPopup'), btnAd=document.getElementById('adButton'), cd=document.getElementById('countdown');
-  function showPopup(){ if(!localStorage.getItem('adClickedAt')){ popup.classList.remove('hidden'); let t=5; const iv=setInterval(()=>{ t--; cd.textContent=`Please wait ${t}s...`; if(t<=0){ clearInterval(iv); btnAd.textContent='Watch Ad'; btnAd.disabled=false; } },1000); }}
-  function onAdClick(){ localStorage.setItem('adClickedAt',Date.now()); window.open('https://sawutser.top/4/9278457','_blank'); popup.classList.add('hidden'); }
-  document.addEventListener('DOMContentLoaded',()=>{ showPopup(); setInterval(()=>{ const ts=localStorage.getItem('adClickedAt'); if(ts && Date.now()-ts>3600000) localStorage.removeItem('adClickedAt'); },60000); });
-</script></body>
-</html>
+  const themes = [['#0b0f1a','#fff','#8e2de2','Dark Violet'],['#1a1a1a','#eee','#ff4081','Dark Pink'],['#ffffff','#000','#ff4081','White Pink'],['#f0f0f0','#111','#ff5722','White Red']];
+  const neonColors = [['#39ff14','Neon Green'],['#ff00ff','Neon Magenta'],['#00ffff','Neon Cyan'],['#ffd700','Neon Gold'],['#ff4444','Neon Red']];
+  const fonts = [['Poppins','Poppins'],['Roboto','Roboto'],['Orbitron','Orbitron']];
+  let localTheme=null, localNeon=null, localFont=null;
+  function applyTheme(bg,txt,acc,ctrlBg){document.documentElement.style.setProperty('--bg-color',bg);document.documentElement.style.setProperty('--text-color',txt);document.documentElement.style.setProperty('--accent-color',acc);document.documentElement.style.setProperty('--control-bg',ctrlBg);}  
+  function applyNeon(col){document.documentElement.style.setProperty('--neon-glow',col);document.documentElement.style.setProperty('--box-border',`0 0 10px ${col}`);}  
+```
